# easy-choose

./: LICENSE  README.md  pyproject.toml
src/easy_choose/: __init__.py  chooser.py  tests.py
