[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-choose"
version = "1.0.8"
authors = [
  { name="Raskora", email="Raskora@outlook.com" },
]
description = "It can easily help you choose!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Raskora/easy-choose"
"Bug Tracker" = "https://github.com/Raskora/easy-choose/issues"